# mcproxy

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DOCUMENTATION_INDEX.md  Dockerfile  GIT_SETUP.md  MCPROXY_INTEGRATION_STATUS.md  NOTIFICATION_TEST.md  QUICK_START_CHAT.md  README.md  REPOSITORY_READY.md  ROADMAP.md  SESSION_SUMMARY.md  THINKING_TOOLS_QUICK_REFERENCE.md  UPCOMING_FEATURES.md  adapter.py  api_manifest.py  api_parallel.py  api_sandbox.py  api_stubs.py  blocklist.py  cli.py  code_validator.py  config_reloader.py  config_watcher.py  deploy.sh  http_backend.py  logging_config.py  main.py  mcp-servers.example.json  mcp_server.py  mcproxy.container  mcproxy.json  mcproxy_decision_summary.md  mcproxy_implementation_guide.md  mcproxy_spec.md  podman-compose.yml  pyproject.toml  requirements.txt  (+5 more)
.beads/: .gitignore  config.yaml  dolt-backup.json  issues.jsonl  metadata.json
.opencode/: opencode.json
auth/: __init__.py  agent_registry.py  audit_logger.py  credential_store.py  jwt_keys.py  oauth.py  scope_resolver.py
cache/: manifest.json
docs/: AGENT_SETUP.md  EXAMPLES.md  HISTORY.md  README.md  empty_search_optimization.md  final_tool_design.md  instruction_optimization_summary.md  jesse_mcp_issues.md  optimization_analysis.md  performance_summary.md  search_config.md  session_summary.md
examples/: .env.example  mcp-servers.example.json
manifest/: __init__.py  errors.py  hooks.py  query.py  registry.py  typescript_gen.py
sandbox/: __init__.py  access_control.py  constants.py  executor.py  factory.py  pool.py  proxy.py  runtime.py  security.py  validation.py
scripts/: deploy.sh  push-deploy.sh  setup.sh
server/: __init__.py  admin_routes.py  auth_middleware.py  auth_routes.py  handlers.py  lifecycle.py  sse.py
tests/: conftest.py  test_api_manifest.py  test_api_parallel.py  test_api_sandbox.py  test_auth.py  test_code_validator.py  test_config_v2.py  test_integration_v2.py  (+4 more)
(+38 files in other folders)
